--- a/src/main/resources/templates/user/login-form.mustache
+++ b/src/main/resources/templates/user/login-form.mustache
@@ -6,16 +6,25 @@
         <div class="card-body">
             <form action="/login" method="post" enctype="application/x-www-form-urlencoded" >
                 <div class="mb-3">
-                    <input type="text" class="form-control". placeholder="enter username" name="username" >
+                    <input type="text" class="form-control". placeholder="enter username" name="username"value="길동" >
                 </div>
 
                 <div class="mb-3">
-                    <input type="password" class="form-control". placeholder="enter password" name="password" >
+                    <input type="password" class="form-control" placeholder="enter password" name="password" value="1234">
                 </div>
-                <button type="submit" class="btn btn-primary form-control">회원가입</button>
+                <button type="submit" class="btn btn-primary form-control">로그인</button>
             </form>
 
         </div>
+
+
+        {{#error}}
+            <div class="alert alert-danger mg-5" role="alert">
+                잘못된 요청입니다
+
+            </div>
+
+        {{/error}}
     </div>
 
 </main>
